SERVER-97511 Make `flushRoutingTableCacheUpdates` and `flushDatabaseCacheUpdates` commands not refresh the routing information (#29548)

GitOrigin-RevId: 4488bf7fad02a1cc989b585f09c138030e82d14a