src/mongo/db/s/flush_routing_table_cache_updates_command.cpp
@@ -159,14 +159,6 @@ public:
                 uassertStatusOK(
                     FilteringMetadataCache::get(opCtx)->onCollectionPlacementVersionMismatch(
                         opCtx, ns(), boost::none));
-
-                // TODO (SERVER-97511): Remove the refresh of the routing information.
-                // (Ignore FCV check): this feature flag is not FCV-gated.
-                if (feature_flags::gDualCatalogCache.isEnabledAndIgnoreFCVUnsafe()) {
-                    const auto catalogCache = Grid::get(opCtx)->catalogCache();
-                    catalogCache->onStaleCollectionVersion(ns(), boost::none /* wantedVersion */);
-                    (void)catalogCache->getCollectionRoutingInfo(opCtx, ns());
-                }
             }
 
             // A config server could receive this command even if not in config shard mode if the CS
