jstests/with_mongot/e2e/hybridSearch/union_with_vector_search.js
@@ -44,6 +44,9 @@ basicColl.drop();
 assert.commandWorked(basicColl.insert({"_id": 100, "localField": "cakes", "weird": false}));
 assert.commandWorked(basicColl.insert({"_id": 101, "localField": "cakes and kale", "weird": true}));
 
+// Make sure the shard that is going to execute the $unionWith/$lookup has up-to-date routing info.
+basicColl.aggregate([{$lookup: {from: moviesCollName, pipeline: [], as: "out"}}]);
+
 const limit = 20;  // Default limit (number of documents returned)
 const vectorSearchOverrequestFactor =
     10;  // Multiplication factor of k for numCandidates in $vectorSearch.
