jstests/with_mongot/search_mocked/search_sharded_union_with_lookup.js
@@ -300,8 +300,7 @@ function setupAllMockRequests(searchColl, mockResponses, explainVerbosity = null
 
 function lookupTest(baseColl, searchColl, mockResponses) {
     // Before running the test, make sure shard1 has up-to-date routing information.
-    assert.commandWorked(
-        st.shard1.adminCommand({_flushRoutingTableCacheUpdates: searchColl.getFullName()}));
+    baseColl.aggregate([{$lookup: {from: searchColl.getName(), pipeline: [], as: "out"}}]);
 
     setupAllMockRequests(searchColl, mockResponses);
     assert.sameMembers(expectedLookupResults,
