jstests/with_mongot/search_mocked/sharded_sort_subpipeline.js
@@ -133,8 +133,7 @@ function mockMongotShardResponses(mongotQuery) {
 
 (function testUnionWith() {
     // Before running this test, make sure shard0 has up-to-date routing information.
-    assert.commandWorked(
-        st.shard0.adminCommand({_flushRoutingTableCacheUpdates: shardedColl.getFullName()}));
+    unshardedColl.aggregate([{$lookup: {from: shardedColl.getName(), pipeline: [], as: "out"}}]);
 
     const mongotQuery = {sort: {a: 1}};
     const sortSpec = {"$searchSortValues.a": 1};
